# digital_twin_robot

./: .all-contributorsrc  .gitignore  README.md  WP2_TD_Lect_5_KostopoulosAntonios.ipynb  WP2_TD_Lect_6_KostopoulosAntonios.ipynb  armpi_fpv.slxc  devl_roadmap_DTFFaultDianosis.md  lstmv2layers1000.mat  lstmv3_2bilayers_2500interpolate_200hiddenunnit_dropout0_2_alr_128batch.mat  lstmv3_2bilayers_500interpolate_200hiddenunnit_dropout0_2_alr_128batch.mat  motor1_data.csv  motor2_data.csv  motor3_data.csv  motor4_data.csv  motor5_data.csv  motor6_data.csv  opening the model in Gazebo  package-lock.json  requirements.txt  siameseModelFinal  test0.m  test1.m  testinglists.m  testingnewcreation.m  testingtrain.m  trainedlstm1000.mat
course_project_DARR/: condition_monitoring.mlx
course_project_DARR/Evaluation/: Submission and grading critieria.md  template_notebook.ipynb
course_project_DARR/Evaluation/Data challenge/: prepare_data.ipynb
course_project_DARR/WP1_Condition-monitoring/WP1_submission_group_1/: data_motor_5.csv  data_motor_6.csv
course_project_DARR/WP1_Condition-monitoring/WP1_submission_group_2/: app_prototype.mlapp  data_motor_2.csv  data_motor_4.csv  data_motor_5.csv  data_motor_6.csv  data_visualisation_thomas.ipynb  test_offline_echo.m  test_offline_subscriber.m
course_project_DARR/WP2_Data-driven fault detection/TD_5/: WP2_TD_Lect_5_Chaofan.ipynb  WP2_TD_Lect_5_DuYifan.ipynb  WP2_TD_Lect_5_ELMEHDI.ipynb  WP2_TD_Lect_5_FirasBENNASR.ipynb  WP2_TD_Lect_5_Firas_BEN_NASR.ipynb  WP2_TD_Lect_5_Huo Zhenquan.ipynb  WP2_TD_Lect_5_WATTEAU.ipynb  WP2_TD_Lect_5_wang_shirui.ipynb
course_project_DARR/WP2_Data-driven fault detection/TD_6/: WP2_TD_Lect_6.ipynb  WP2_TD_Lect_6_DuYifan.ipynb  WP2_TD_Lect_6_EL MEHDI.ipynb  WP2_TD_Lect_6_FIRAS_BEN_NASR.ipynb  WP2_TD_Lect_6_FirasBENNASR.ipynb  WP2_TD_Lect_6_Huo Zhenquan.ipynb  WP2_TD_Lect_6_WATTEAU.ipynb  WP2_TD_Lect_6_shirui.ipynb  utility.py
course_project_DARR/WP2_Data-driven fault detection/supports/: WP2_TD_Lect_5_with_solution.ipynb  (+1 more)
create_multibody_from_urdf/: armpi_fpv_direct_import.slx  test_FK_IK.mlx
documents/: how_to_prepare_python.md
documents/cm_matlab_ros/: build_msg_in_matlab.md  create_a_fake_robot_for_testing.md  how_to_collect_trajectory_csv.md  how_to_use_condition_monitoring_app.md  prepare_robot.md
ik_model/: ForwardKinematic.m  InverseKenimatic.asv  InverseKenimatic.m  InverseKenimatic.mat  Shape_test.m  Subsystem.slx  armpi_fpv.slx  armpi_fpv.slx.autosave  armpi_fpv.slxc  armpi_fpv_killan.slxc  cherrypicking2000elemfromdatasets.m  from_matlab_siamese_example.m  heuristic_average_error.m  ifk_updated_armpi_fpv.slx  ifk_updated_armpi_fpv_outdated.slx  interpolation.asv  interpolation.m  lstm_test.mat  lstmv3_2bilayers_1000_line_circle_motorerror00_0123_reduced6_100_150hiddenunnit_dropout0_2_alr_128batch.mat  lstmv3_2bilayers_1000_line_circle_motorerror00_0123_reduced_10_6_100_150hiddenunnit_dropout0_2_alr_128batch.mat  lstmv3_2bilayers_1000_line_circle_motorerror00_0123_reduced_1_6_100_150hiddenunnit_dropout0_2_alr_128batch.mat  lstmv3_2bilayers_1000_line_circle_motorerror00_0123_reduced_1_6_300_150hiddenunnit_dropout0_2_alr_128batch.mat  lstmv3_2bilayers_150_line_circle_interpolate_motorerror02_0789_150hiddenunnit_dropout0_2_alr_128batch.mat  main.m  main2.asv  main2.m  main3.m  main3_armpi_fpv.slx  main3_armpi_fpv.slxc  main4.m  mainwithnewerrors.m  optimum_train_predict.m  rain_predict_lstm.asv  rain_predict_lstm.m  robot_model.slx  robot_model.slxc  siamese_model.m  tes.m  testing2.m  testing22.m  (+5 more)
ik_model/Datasets_training/: cellArray5_circle_motor123error00.mat  cellArray5_interpolation_motor123error00.mat  cellArray5_line_motor123error00.mat
ik_model/Deprecated_slx/: ifk_updated_armpi_fpv.slx
ik_model/Trained_lstm_models/: lstmv1Ds1000.mat  lstmv3_2bilayers_150_line_circle_interpolate_motorerror00_0123_reduced6_500_150hiddenunnit_dropout0_2_alr_128batch.mat  lstmv3_2bilayers_150_line_circle_interpolate_motorerror02_0101112_150hiddenunnit_dropout0_2_alr_128batch.mat  lstmv3_2bilayers_153_line_circle_interpolate_200hiddenunnit_dropout0_2_alr_128batch.mat  lstmv3_2bilayers_500_interpolation_motorerror00_0123_reduced_10_6_100_150hiddenunnit_dropout0_2_alr_128batch.mat
ik_model/meshes/: base_link.STL  gripper_base.STL  link3.STL
meshes/: l_in_link.STL
pole_project/create_multibody_from_urdf/: armpi_fpv_step_1_direct_import.slx  armpi_fpv_step_2_ideally_controlled.slx  armpi_fpv_step_3_inverse_forward_kinematics.slx  load_urdf.mlx  test_FK_IK.mlx
projects/MACS_PhD_School_2024/: demo_motor_6_clf_mdl.ipynb
reference_model_development/condition_monitoring_demo/: after_generating_msg.m  cm_listener.py  generate_msg.m
reference_model_development/data_collection/: condition_monitoring.mlx  data_collection_for_ref_model.mlapp  data_motor_1.csv  data_motor_2.csv  data_motor_3.csv  data_motor_4.csv  data_motor_5.csv  data_motor_6.csv  func_receive_msg.m  save_cm_data.m
robot_digital_twin/catkin_ws/matlab_msg_gen_ros1/win64/src/cm/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
robot_digital_twin/catkin_ws/matlab_msg_gen_ros1/win64/src/cm/m/+ros/+msggen/+cm/: msg_cm.m
robot_digital_twin/catkin_ws/matlab_msg_gen_ros1/win64/src/cm/src/: cm_msg_cm_message.cpp
robot_digital_twin/condition_monitoring_matlab_ros/: after_generating_msg.m  generate_msg.m
robot_digital_twin/condition_monitoring_python_ros/: cm_listen_position.py  cm_listen_trajectory.py  cm_listener.py  data_vis.ipynb  data_vis_trajectory.ipynb
robot_digital_twin/motor_temperature_digital_twin/: demo_motor_6_lr.ipynb  demo_regression_mdl.ipynb  motor_6_clf.ipynb  quick_and_dirty_clf.ipynb  quick_and_dirty_model.ipynb  utility.py
slprj/_jitprj/: s02WTHFmD1uRRI9eaMht2yE.l  s02WTHFmD1uRRI9eaMht2yE.mat
urdf/: armpi_fpv.csv  urdf.backup
urdf files/: armpi_fpv.slx  import_urdf.m  sim_armpi_fpv.slx
urdf files for the robot/meshes/: r_link.STL  r_out_link.STL
urdf files/urdf/: armpi_fpv.csv  armpi_fpv.slx.autosave  armpi_fpv.urdf
(+1182 files in other folders)
